Bug 181446: Thread will be broken when child message is followed by parent message if subjects are not the same, Patch by Teemu Mannermaa, r=bienvenu, sr=mscott, not part of the Firefox default build